bug squashing

--- a/app/assets/stylesheets/style.sass
+++ b/app/assets/stylesheets/style.sass
@@ -217,7 +217,7 @@ input[name="add-to-account"], a.add-btn
     border: 1px solid #d0d0d0
 
 .visited-cell
-  background-color: $secondary-blue
+  background-color: $primary-blue
   color: $body-bg
 
 #group-show
